--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,52 +1,56 @@
-\cvsection{Life Philosophy}
-\begin{quote}
-``Quality is not an act; it is a habit.''
-\end{quote}
 
-\cvsection{Most Proud of}
+\cvsection{Orgulloso de}
 
-\cvachievement{\faTrophy}{Courage I had}{to follow my childhood dreams of being a scientist}
+\cvachievement{\faTrophy}{El coraje que tengo}{consiguiendo mis objetivos y perseguiendo mi sueño de niño por convertirme en un científico}
 
 \divider
 
-\cvachievement{\faHeartbeat}{Persistence \& Loyalty}{I showed despite the hard moments and sleepless nights In Kolligian Library}
+\cvachievement{\faLineChart}{Mi progreso académico}{desde una secundaria en Chimalhuacán a la universidad más importante en Ciencia del país}
 
 \divider
 
-\cvachievement{\faLineChart}{My Academic Progress}{from a failing high school freshman to proud UC Undergrad Researcher}
+\cvachievement{\faMale}{Primero en acceder a una univesidad}{En mi familia, también en cursar el bachillerato a tiempo}
 
-\divider
 
-\cvachievement{\faMale}{First to Attend University}{In my family}
-
-\cvsection{Strengths}
-
-\cvtag{Hard-working} 
-\cvtag{Powerful Orator}
-\cvtag{Dedicated to Perfection}
-
-\divider\smallskip
-
-\cvtag{HTML5 \& CSS}
-\cvtag{LaTeX \& R}
-\cvtag{Statistical Analysis \& Hypothesis Testing}
-\cvtag{Review Articles \& Experimental Research}
-
-\cvsection{Languages}
+\cvsection{Aptitudes}
 
 \cvskill{English}{5}
 % \divider
 
-\cvskill{HTML}{3}
-% \divider
-
-\cvskill{Spanish}{1}
-
-
-\cvsection{Education}
-
-\cvevent{B.A.\ in Psychology}{University of California, Merced}{Fall 2015-- Ongoing}{}
+\cvskill{Français}{3}
 
 \divider
 
-\cvevent{MINOR\ in Public Health}{University of California, Merced}{Fall 2015 -- Ongoing}{}
+\cvskill{Microsoft Word y Excel}{5}
+\cvskill{Java 1.8+}{5}
+\cvskill{Latex}{5}
+\cvskill{Linux (Ubuntu-Debian based)}{4}
+\cvskill{Python}{4}
+\cvskill{Haskell}{4}
+\cvskill{Django}{3}
+\cvskill{HTML5}{3}
+\cvskill{CSS}{3}
+
+
+
+
+\cvsection{Referencias}
+
+% \cvref{name}{email}{mailing address}
+\cvref{M. en Ciencias\ Pedro Porras Flores}{porras@ciencias.unam.mx}
+{@PPorras (Telegram)}
+
+\divider
+
+\cvref{M. en Ciencias\ Wendy Ghisleine García Díaz}{wendy091031@hotmail.com}
+{55 8033 8595}
+
+\divider
+
+\cvref{Lic. en Letras Clásicas\ María de los Ángeles Pérez Medel }{angeles.medel01@gmail.com}
+{55 2304 4573}
+\divider
+
+\cvref{M. en Psic.\ Laura Alejandra Serrano González }{ }
+{55 2866 9838}
+
