--- a/page2sidebar.tex
+++ b/page2sidebar.tex
@@ -1,10 +1,19 @@
-\cvsection{Referees}
+\cvsection{Referencias}
 
 % \cvref{name}{email}{mailing address}
-\cvref{Prof.\ Van Bebber}{kvanbebber@ucmerced.edu}
-{5200 Lake Road\\University of California, Merced}
+\cvref{M. en Ciencias\ Pedro Porras Flores}{porras@ciencias.unam.mx}
+{@PPorras (Telegram)}
 
 \divider
 
-\cvref{Prof.\ Fradkin}{cfradkin@ucmerced.edu}
+\cvref{M .en Ciencias\ Wendy Ghisleine García Díaz}{wendy091031@hotmail.com}
+{55 8033 8595}
+
+\divider
+
+\cvref{Lic. en Letras Clásicas\ María de los Ángeles Pérez Medel }{angeles.medel01@gmail.com}
+{55 2304 4573}
+\divider
+
+\cvref{M. en Psic.\ Laura Alejandra Serrano González }{wendy091031@hotmail.com}
 {5200 Lake Road\\University of California, Merced}
