--- a/Spanish/main.tex
+++ b/Spanish/main.tex
@@ -43,13 +43,13 @@
 \renewcommand{\ratingmarker}{\faCircle}
 
 %% sample.bib contains your publications
-\addbibresource{sample.bib}
+
 
 \begin{document}
 \name{Kevin Ariel Merino Peña}
   \tagline{Estudiante de Ciencias de la computación}
 % Cropped to square from https://en.wikipedia.org/wiki/Marissa_Mayer#/media/File:Marissa_Mayer_May_2014_(cropped).jpg, CC-BY 2.0
-\photo{2.5cm}{ari}
+\photo{2.5cm}{img/ari}
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
