this is the new version, provisional to try frontend masters

--- a/Spanish/main.tex
+++ b/Spanish/main.tex
@@ -26,10 +26,10 @@
 \usepackage[default]{lato}
 
 % If using xelatex or lualatex:
-% \setmainfont{Lato}
+% \setmainfont{Lato} #2e87fe
 
 % Change the colours if you want to
-\definecolor{VividPurple}{HTML}{2E64FE}
+\definecolor{VividPurple}{HTML}{2E87FE}
 \definecolor{SlateGrey}{HTML}{2E2E2E}
 \definecolor{LightGrey}{HTML}{666666}
 \colorlet{heading}{VividPurple}
